--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.4"
 # command to install dependencies
 install:
-    - python setup.py develop
+    - python setup.py -q install
     - pip install coveralls
 # command to run tests
 script:
